--- a/HttpClientForSQL/MainWindow.xaml
+++ b/HttpClientForSQL/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Button Content="Button" HorizontalAlignment="Left" Margin="636,31,0,0" VerticalAlignment="Top" Width="112" Height="51"/>
+
     </Grid>
 </Window>
